--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -84,7 +84,7 @@ year={2009},
 pages={329-332}, 
 keywords={reverse engineering;software architecture;domain knowledge;recursive framework;software system architecture;software system comprehension;viewpoints architecture extraction;Computer architecture;Computer bugs;Data mining;Europe;Information resources;Object oriented modeling;Phase measurement;Software architecture;Software systems;Time measurement}, 
 doi={10.1109/WICSA.2009.5290676}, 
-month={Sept},
+month={Sept}
 }
 
 @inproceedings{Brondum:2010:TAV:1833335.1833344,
@@ -183,6 +183,28 @@ month={Sept},
 
 % yleinen testattavuus
 
+@INPROCEEDINGS{Jungmayr:2002, 
+author={S. Jungmayr}, 
+booktitle={Software Maintenance, 2002. Proceedings. International Conference on}, 
+title={Identifying test-critical dependencies}, 
+year={2002}, 
+pages={404-413}, 
+keywords={program testing;software maintenance;software metrics;regression testing;software maintenance cost reduction;software testability metrics;system structure;test-critical dependencies;Automatic testing;Controllability;Costs;Design for testability;Guidelines;Observability;Software maintenance;Software systems;Software testing;System testing}, 
+doi={10.1109/ICSM.2002.1167797}, 
+ISSN={1063-6773} 
+}
+
+@INPROCEEDINGS{Bruntink:2004, 
+author={M. Bruntink and A. van Deursen}, 
+booktitle={Source Code Analysis and Manipulation, 2004. Fourth IEEE International Workshop on}, 
+title={Predicting class testability using object-oriented metrics}, 
+year={2004}, 
+pages={136-145}, 
+keywords={Java;object-oriented methods;program testing;Java;class testability;object-oriented metrics;ISO standards;Java;Object oriented modeling;Programming;Software quality;Software systems;Software testing;Software tools;System testing;Writing}, 
+doi={10.1109/SCAM.2004.16}, 
+month={Sept}
+}
+
 @article{Freedman:1991:TSC:126218.126229,
  author = {Freedman, Roy S.},
  title = {Testability of Software Components},
@@ -224,28 +246,24 @@ month={Sept},
 
 @inproceedings{voas_improving_1992,
 	title = {Improving the software development process using testability research},
-	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=285852},
 	pages = {114--121},
 	booktitle = {Software Reliability Engineering, 1992. Proceedings., Third International Symposium on},
 	publisher = {{IEEE}},
 	author = {Voas, Jeffrey M. and Miller, Keith W.},
 	urldate = {2016-03-02},
-	date = {1992},
-	file = {00285852.pdf:files/119/00285852.pdf:application/pdf}
+	date = {1992}
 }
 
 % design pattern testattavuus
 
 @inproceedings{baudry_measuring_2003,
 	title = {Measuring and improving design patterns testability},
-	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=1232455},
 	pages = {50--59},
 	booktitle = {Software Metrics Symposium, 2003. Proceedings. Ninth International},
 	publisher = {{IEEE}},
 	author = {Baudry, Benoit and Traon, Yves Le and Sunyé, Gerson and Jézéquel, Jean-Marc},
 	urldate = {2016-03-05},
-	date = {2003},
-	file = {01232455.pdf:files/15/01232455.pdf:application/pdf}
+	date = {2003}
 }
 
 @inproceedings{baudry_testability_2002,
@@ -313,14 +331,12 @@ month={May}
 
 @incollection{garcia_toward_2009,
 	title = {Toward a catalogue of architectural bad smells},
-	url = {http://link.springer.com/chapter/10.1007/978-3-642-02351-4_10},
 	pages = {146--162},
 	booktitle = {Architectures for adaptive software systems},
 	publisher = {Springer},
 	author = {Garcia, Joshua and Popescu, Daniel and Edwards, George and Medvidovic, Nenad},
 	urldate = {2016-03-05},
-	date = {2009},
-	file = {chp%3A10.1007%2F978-3-642-02351-4_10.pdf:files/3/chp%3A10.1007%2F978-3-642-02351-4_10.pdf:application/pdf}
+	date = {2009}
 }
 
 @inproceedings{garcia_identifying_2009,
